<resources>
    <string name="app_name">Scam Guard</string>
    <string name="default_web_client_id">Ваш_клиентский_ID_из_Google_Cloud_Console</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Search</string>
    <string name="menu_learn">Learn</string>
    <string name="menu_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="b_f_c">Button_for_click</string>

    <string name="main_content">
        &lt;b&gt;Ваш личный определитель номера&lt;/b&gt; — надёжный защитник от спама, мошенничества и нежелательных звонков.&lt;br/&gt;&lt;br/&gt;
        &lt;b&gt;Это приложение - инструмент, предлагающий функции и возможности по выявлению телефонных мошенников:&lt;/b&gt;&lt;br/&gt;
        &#8226; Описание основных схем мошенничества&lt;br/&gt;
        &#8226; Распознавание телефонных мошенников&lt;br/&gt;
        &#8226; Поиск информации о номере&lt;br/&gt;&lt;br/&gt;
        Используйте приложение как инструмент для безопасного общения!
    </string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test2">testActivity2</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="android_studio">Android Studio</string>
    <string name="emailadress_gmail_com">emailadress@gmail.com</string>
    <string name="account_toolbar">Аккаунт</string>
    <string name="profile">Profile</string>
    <string name="settings">Настройки</string>
    <string name="learn">Справка</string>
    <string name="search">Поиск</string>
    <string name="account">Аккаунт</string>
    <string name="history">History</string>
    <string name="history_a">История</string>
    <string name="about_us">о приложении</string>
    <string name="about_us_a">о приложении</string>
    <string name="info">info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_empty">EmptyActivity</string>
    <string name="HomeRU">Дом</string>
    <string name="LearnRU">Справка</string>
    <string name="SearchRU">Поиск</string>
    <string name="InfoRU">Инфо</string>
    <string name="Chapter_1_RU"><![CDATA[<p>Мошенники звонят по телефону и присылают голосовые сообщения от имени родственников и друзей. С помощью специальных программ им удаётся менять голос.</p>]]>+ "<p><b>Что говорят мошенники в таких звонках и аудиосообщениях:</b></p>"
                + "<ul>"
                + "<li> Просят дать в долг деньги;</li>"
                + "<li> Жалуются, что попали в неприятную ситуацию, и просят перевести деньги;</li>"
                + "<li> Сообщают от имени полицейского, что родственник попал в беду. Этот же родственник просит экстренно перевести определённую сумму.</li>"
                + "</ul>"</string>

    <string name="language_label">Язык</string>
    <string name="language_russian">Русский</string>
    <string name="language_english">English</string>
    <string name="History">История</string>
    <string name="GoSearch">Начать поиск</string>
    <string name="GoHelp">Изучить схемы мошенничества</string>
    <string name="InputNumber">Введите номер телефона</string>
    <string name="SearchInActivity">Поиск</string>
    <string name="CleanCash">Очитить кеш</string>
    <string name="DarkTheme">Темная тема</string>
    <string name="LightTheme">Светлая тема</string>
    <string name="YourSearchHistory">Ваша история поисков</string>
    <string name="Account">Аккаунт</string>
    <string name="Close">Закрыть</string>
    <string name="YourNickName">Ваш ник неим</string>
    <string name="EnterNewEmail">Введите новый email</string>
    <string name="EnterNewPassword">Введите новый пароль</string>
    <string name="Connected">Подключено</string>
    <string name="Safe">Сохранить</string>
    <string name="Reset">Сбросить</string>
    <string name="DellAccount">Удалить аккаунт</string>
    <string name="Exit">Выйти</string>
    <string name="Entrance">Вход</string>
    <string name="Registration">Регистрация</string>
    <string name="EnterEmail">Введите email</string>
    <string name="EnterPassword">Введите пароль</string>
    <string name="ErrorIncorrectData">Ошибка: Неверные данные</string>
    <string name="Skip">Пропустить</string>
    <string name="InputYourNickName">Введите свой ник</string>
    <string name="RepeatThePassword">Повторите пароль</string>
    <string name="EnterCode">введите код</string>
    <string name="GetCode">Получить код</string>
    <string name="SignIn">Зарегистрироваться</string>
    <string name="Confirm">Подтвердить</string>
    <string name="Password">Пароль</string>
    <string name="TextEnterPassword">Введите пароль для подтверждения удаления аккаунта:</string>
    <string name="PopularFraudSchemesIn2024">Популярные схемы мошенничества в 2024 году</string>
    <string name="Content">Содержание:</string>
    <string name="ImitationOfTheVoiceOfRelativesInAudioMessages">1. Имитация голоса родных в аудиосообщениях</string>
    <string name="CallOrMessageFromTheBoss">2. Звонок или сообщение от «начальника»</string>
    <string name="CallsFromPseudoEmployeesOfGovernmentAgenciesAndDepartments">3. Звонки от псевдосотрудников госслужб и ведомств</string>
    <string name="CallsFromBankEmployees">4. Звонки от лжесотрудников банков</string>
    <string name="FakePollsAndContests">5. Фейковые опросы и конкурсы</string>
    <string name="ImitationOfTheVoiceOfRelativesInAudio">1. Имитация голоса родных в аудиосообщениях</string>
</resources>