<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/i_3"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_icon_2"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_learn"
            android:icon="@drawable/_024px_oojs_ui_icon_"
            android:title="@string/menu_learn" />
        <item
            android:id="@+id/"
            android:icon="@drawable/free_icon_settings_2815474"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info2"
            android:title="@string/about_us"
            android:theme="@style/AboutUsMenuItemStyle"
            android:textColor="@color/gray2"

            />
    </group>
</menu>