<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_settings"
    style="@style/ToolbarStyle">

    <include layout="@layout/app_bar_main"/>

    <include layout="@layout/navigation_bar"/>

    <!--<Switch
        android:id="@+id/themeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="10dp"
        android:text="Темная тема"
        app:layout_constraintBottom_toTopOf="@+id/CleanCashButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />-->

    <TextView
        android:id="@+id/language_selection_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/language_label"
        android:textSize="18sp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintTop_toBottomOf="@+id/DarkLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/language_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/language_selection_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_russian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/language_russian" />

        <RadioButton
            android:id="@+id/radio_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/language_english" />
    </RadioGroup>

    <Button
        android:id="@+id/CleanCashButton"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#54F44336"
        android:text="@string/CleanCash"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/language_radio_group"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/DarkLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DarkTheme"
        android:textColor="?attr/colorOnSurface"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/imageDark"
        app:layout_constraintStart_toStartOf="@id/imageDark"
        app:layout_constraintEnd_toEndOf="@id/imageDark" />


    <TextView
        android:id="@+id/LightLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/LightTheme"
        android:textColor="?attr/colorOnSurface"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/imageLight"
        app:layout_constraintStart_toStartOf="@id/imageLight"
        app:layout_constraintEnd_toEndOf="@id/imageLight"
        />

    <ImageView
        android:id="@+id/line_dark"
        android:layout_width="187dp"
        android:layout_height="218dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageDark"
        app:layout_constraintEnd_toEndOf="@+id/imageDark"
        app:layout_constraintStart_toStartOf="@+id/imageDark"
        app:layout_constraintTop_toTopOf="@+id/imageDark"
        app:srcCompat="@drawable/line_choice" />

    <ImageView
        android:id="@+id/line_light"
        android:layout_width="187dp"
        android:layout_height="218dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageLight"
        app:layout_constraintEnd_toEndOf="@+id/imageLight"
        app:layout_constraintStart_toStartOf="@+id/imageLight"
        app:layout_constraintTop_toTopOf="@+id/imageLight"
        app:srcCompat="@drawable/line_choice" />

    <ImageButton
        android:id="@+id/imageDark"
        android:layout_width="174dp"
        android:layout_height="203dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="70dp"
        android:background="@color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/night_city_r" />

    <ImageButton
        android:id="@+id/imageLight"
        android:layout_width="174dp"
        android:layout_height="203dp"
        android:layout_marginEnd="12dp"
        android:background="@color/transparent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageDark"
        app:srcCompat="@drawable/day_city_r" />

</androidx.constraintlayout.widget.ConstraintLayout>